--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clsx": "^2.1.1",
     "flowbite-react": "^0.11.8",
     "lucide-react": "^0.513.0",
+    "mongodb": "^6.20.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "sass": "^1.89.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4"
